--- a/templates/chat/room.html
+++ b/templates/chat/room.html
@@ -24,6 +24,8 @@
         </div>
     </div>
 </div>
+
 <script>var roomName=({{ room_name_json }});</script>
 <script type="text/javascript" src="{% static 'homeApp/javascript/popchat.js' %}"></script>
+<button type="button" onclick=refreshFunction();>refresh!</button>
 {% endblock %}
