--- a/templates/homeApp/navbar.html
+++ b/templates/homeApp/navbar.html
@@ -59,7 +59,7 @@
 {#        <li class="dropdown">#}
 {#            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{request.session.lang}}<span class="caret"></span></a>#}
 {#        </li>#}
-        <li><a href="#SignIn">{% trans "Sign in" %}</a></li>
+        <li><a href="/chat/login">{% trans "Sign in" %}</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
