--- a/templates/chat/room.html
+++ b/templates/chat/room.html
@@ -1,31 +1,37 @@
 {% extends "homeApp/navbar.html" %}
 {% block header %}
+{% load staticfiles %}
+<link rel="stylesheet" type="text/css" href="{% static 'homeApp/css/popchat.css' %}">
 {% endblock %}
 {% block content %}
-{% load staticfiles %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'homeApp/css/popchat.css' %}">
+
+
 
 
 
 <div class="col-sm-3 col-sm-offset-4 frame">
     <ul id="specialUL"></ul>
+    {% if user.is_authenticated %}
     <div>
         <div class="msj-rta macro">
-            <div class="text text-r" style="background:whitesmoke !important">
-                <input class="mytext" id="chat-message-input" type="text" size="100" placeholder="Type a message"/>
-{#                <input class="mytext" id="chat-message-input" type="text" size="100" placeholder="Type a message"/><br/>#}
-{#                <input id="chat-message-submit" type="button" value="Send"/>#}
-            </div>
+
+                <div class="text text-r" style="background:whitesmoke !important">
+                    <input class="mytext" id="chat-message-input" type="text" size="100" placeholder="Type a message"/>
+                </div>
 
         </div>
         <div style="padding:10px;">
             <span id="chat-message-submit" type="button" value="Send" type="button" class="glyphicon glyphicon-share-alt"></span>
         </div>
     </div>
+    {% endif %}
 </div>
 
 <script>var roomName=({{ room_name_json }});</script>
 <script type="text/javascript" src="{% static 'homeApp/javascript/popchat.js' %}"></script>
-<button type="button" onclick=refreshFunction();>refresh!</button>
+<button type="button" id="refreshButton" onclick=refreshFunction();>refresh!</button>
+<script>
+
+</script>
 {% endblock %}
